python-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: python-demo
  labels:
    app: python-app
spec:
  selector:
    app: python-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: python-demo
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
        version: v1
    spec:
      containers:
        - name: python-app
          image: baojingbo/tekton-test:12.0
          ports:
            - containerPort: 8080
