test-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-app
  labels:
    app: test-app
spec:
  selector:
    app: test-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test-app
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
        version: v1
    spec:
      containers:
        - name: test-app
          image: lbashour/test-app:latest
          imagePullPolicy: Always          
          ports:
            - containerPort: 8080
