test-app-comp.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp-gateway
  namespace: test-app
spec:
  selector:
    gateway-name: testapp-ingress
    gateway-type: ingress
  servers:
  - port:
      number: 8001
      name: http
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: testapp-crt-secret
    hosts:
    - "testapp.cxcto-staging.cisco.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp-server
  namespace: test-app
spec:
  hosts:
  - "testapp.cxcto-staging.cisco.com"
  gateways:
  - testapp-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: test-app.test-app.svc.cluster.local
